# agent-maintainer

./: .flake8  .gitignore  .importlinter  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint  AGENTS.agent-maintainer.md  AGENTS.guardrails.md  AGENTS.md  AGENTS.ratchet.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_CHANGES.md  SECURITY.md  SUPPORT.md  justfile  osv-scanner.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  semgrep.yml  tach.toml
.agent-maintainer/: contracts-baseline.json  contracts.toml  path-risk.toml
.agent-maintainer/change-plans/: agent-adapters-tach-domain-refit.md  agent-client-hooks-package.md  agent-context-compression.md  agent-context-primitives.md  agent-run-artifacts-primitives.md  agent-task-broker-incubator.md  attention-ledger-v0.md  attention-weighted-context-packs.md  background-verifier-lifecycle.md  beta7-release.md  broad-known-wait-orchestration.md  ci-setup-ease.md  claude-async-rewake-hook-option.md  codex-terminal-rewake-hardening.md  config-stabilization.md  context-boundary-and-verifier-artifacts.md  contract-compatibility-ratchets.md  core-scaffold-package.md  cpp-cmake-provider-foundation.md  critical-stabilization.md  deep-audit-integration-series.md  deep-release-evidence.md  diff-aware-verification-path-risk.md  docsync-dogfood-seed.md  docsync-package.md  doctor-consumer-repo-root.md  doctor-worktree-compat.md  dual-client-setup-skill.md  generated-artifact-hygiene.md  immutable-workflow-supply-chain.md  java-gradle-coverage-rollout.md  (+36 more)
.claude/: settings.json
.codex/: config.toml
.docsync/: config.yml  schema.json  trace.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.serena/: .gitignore  project.yml
config/: agent-maintainer-capabilities.json  agent-maintainer-cli.json  dependency-risks.toml  dev-dependencies.in  dev-dependencies.txt  dev-lock.txt  flake8.wemake.example  importlinter.example  pylintrc.example  pyproject.agent-maintainer.toml  pyproject.guardrails.toml  pyright-strict-baseline.json  pyrightconfig.json  tach.example.toml  vulture-whitelist.py
docs/: ROADMAP.md  agent-client-hooks.md  agent-maintainer-guidance.md  agent-maintainer-setup-skill.md  api-support-policy.md  architecture-policy.md  change-plans.md  codex-hooks.md  cohesive-change-overrides.md  cohesive-change-plans.md  compatibility-shims.md  config-metadata.md  configuration-reference.md  context-compression.md  context-safety.md  cpp-cmake-provider.md  dependency-risk-register.md  diagnostics-repair-loop.md  docsync-extraction.md  docsync-onboarding.md  docsync-roadmap.md  docsync-standalone-readme.md  fresh-strict.md  go-provider.md  java-gradle-provider.md  legacy-ratchet.md  multi-ecosystem-reviewability-policy.md  mutation-testing.md  onboarding-first-run.md  optional-gates.md  provider-contribution-guide.md  provider-status.md  quick-start.md  ratcheting.md  release-checklist.md  setup-advisor.md  structure-cohesion.md  supported-scans-and-agent-use.md  team-policy-templates.md  technical-debt-score.md  (+13 more)
examples/fresh-strict/: README.md  pyproject.toml  tach.toml
examples/fresh-strict/src/fresh_strict_example/: __init__.py
examples/fresh-strict/tests/: test_add.py
examples/legacy-ratchet/: README.md  pyproject.toml
examples/legacy-ratchet/src/legacy_ratchet_example/: __init__.py
examples/legacy-ratchet/tests/: test_labels.py
experiments/agent-task-broker/: README.md  pyproject.toml
experiments/agent-task-broker/src/agent_task_broker/: __init__.py  __main__.py  adapters.py  cli.py  handoff.py  locks.py  results.py  routing.py  store.py  worktrees.py
experiments/agent-task-broker/tests/: test_adapters.py  test_downstream_install_contract.py  test_handoff.py  test_locks.py  test_results.py  test_routing.py  test_worktrees.py
guardrail_lib/: __init__.py
schemas/: agent-waits-wait-record.schema.json  codex-app-server-wait.schema.json
scripts/: __init__.py  check_change_budget.py  check_file_lengths.py  check_pip_audit_config.py  check_structure.py  check_suppression_budget.py  check_tach_config.py  guardrail.py  guardrail_args.py  guardrail_catalog.py  guardrail_catalog_python.py  guardrail_catalog_security.py  guardrail_config.py  guardrail_doctor.py  guardrail_doctor_hook_audit.py  guardrail_doctor_logs.py  guardrail_doctor_models.py  guardrail_doctor_policy.py  guardrail_doctor_setup.py  guardrail_executor.py  guardrail_guidance.py  guardrail_layout.py  guardrail_models.py  guardrail_reporting.py  guardrail_runtime.py  guardrail_tach.py  guardrail_tool_capabilities.py  run_bandit.py  run_mutmut.py  run_pyright.py  run_ruff.py  run_secret_scan.py  verify_quiet.py
tests/: conftest.py  test_artifacts.py  test_bandit_runner.py  test_bootstrap_helpers.py  test_change_budget.py  test_check_shims.py  test_config_catalog.py  test_config_catalog_python.py  test_config_catalog_security.py  test_config_loading.py  test_docs_config_catalog.py  test_doctor.py  test_doctor_cli_output.py  test_doctor_commands.py  test_doctor_hook_audit.py  test_doctor_logs.py  test_doctor_optional_gates.py  test_doctor_secret_policy.py  test_doctor_ux.py  test_executor_reporting.py  test_file_lengths.py  test_github_actions_policy.py  test_guidance.py  test_hook_audit.py  test_hooks.py  test_mutmut_runner.py  test_phase10_error_paths.py  test_pyright_runner.py  test_reporting_artifacts.py  test_ruff_runner.py  test_runtime.py  test_script_helpers.py  test_secret_scan_runner.py  test_structure_check.py  test_structure_config.py  test_supply_chain_catalog.py  test_suppression_budget.py  test_tach_config.py  test_tool_capabilities.py  test_verify_quiet.py  (+2 more)
tests/fixtures/existing_app_onboarding/uv-web-app/: .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pyproject.toml
tests/fixtures/existing_app_onboarding/uv-web-app/.github/workflows/: ci.yml
tests/fixtures/existing_app_onboarding/uv-web-app/src/web_status/: __init__.py.fixture
tests/fixtures/existing_app_onboarding/uv-web-app/tests/: test_status.py.fixture
(+1846 files in other folders)
