[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-maintainer"
version = "0.1.0"
description = "Repository maintenance checks and diagnostics for AI-assisted Python development."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
agent-maintainer = "agent_maintainer.cli:console_main"

[project.optional-dependencies]
core = [
  "bandit",
  "coverage",
  "deptry",
  "diff-cover",
  "hypothesis",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
]
agent = ["agent-maintainer[core]"]
hardening = [
  "actionlint-py",
  "agent-maintainer[core]",
  "check-jsonschema",
  "interrogate",
  "pip-audit",
  "wemake-python-styleguide",
  "yamllint",
  "zizmor",
]
manual = ["cyclonedx-bom", "mutmut", "pip-licenses", "semgrep"]
all = ["agent-maintainer[core,agent,hardening,manual]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.agent_maintainer]
mode = "fresh-strict"
architecture_tool = "tach"
source_roots = ["src/agent_maintainer", ".codex/hooks"]
test_roots = ["tests"]
package_paths = ["src/agent_maintainer", ".codex/hooks"]
coverage_source = ["src/agent_maintainer", ".codex/hooks"]
file_length_paths = ["src/agent_maintainer", ".codex/hooks", "tests"]
structure_paths = ["src/agent_maintainer", ".codex/hooks"]
structure_ignore_paths = [
  "tests/**",
  "migrations/**",
  "generated/**",
  ".venv/**",
  "venv/**",
  "**/__pycache__/**",
]
folder_file_warn = 20
folder_file_block = 40
structure_cluster_min = 4
vulture_paths = ["src/agent_maintainer", ".codex/hooks", "tests"]
require_tests = true
coverage_fail_under = 90
diff_cover_fail_under = 90
source_without_test_change_error_profiles = ["precommit"]
allow_source_without_test_change = false
xenon_max_absolute = "B"
xenon_max_modules = "A"
xenon_max_average = "A"
pyright_type_checking_mode = "standard"
enable_pip_audit = true
pip_audit_args = ["-r", "config/dev-lock.txt"]
enable_mutmut = true
mutmut_args = ["run"]
enable_semgrep = true
semgrep_args = [
  "scan",
  "--config",
  "semgrep.yml",
  "--error",
  "--metrics=off",
  "src/agent_maintainer",
  ".codex/hooks",
]
semgrep_profiles = ["manual"]
enable_sbom = true
sbom_args = [
  "requirements",
  "config/dev-lock.txt",
  "--output-reproducible",
  "--of",
  "JSON",
]
sbom_profiles = ["ci"]
enable_license_check = true
license_check_args = ["--from=mixed", "--format=json"]
license_check_profiles = ["manual"]
enable_secret_scanning = true
secret_scanner = "gitleaks"
secret_scan_profiles = ["full", "ci"]
secret_scan_history_profiles = ["security"]
enable_wemake = true
enable_interrogate = true
interrogate_fail_under = 80
enable_markdownlint = true
markdownlint_paths = ["**/*.md"]
enable_yamllint = true
yamllint_paths = [
  ".github/workflows",
  ".github/dependabot.yml",
  ".pre-commit-config.yaml",
  ".markdownlint-cli2.yaml",
  ".yamllint",
  "zizmor.yml",
]
enable_taplo = true
taplo_paths = ["pyproject.toml", "tach.toml", "config/*.toml"]
enable_check_jsonschema = true
check_jsonschema_args = [
  "--builtin-schema",
  "vendor.github-workflows",
  ".github/workflows/verify.yml",
]

[tool.agent_maintainer.diagnostics]
enabled = true
log_dir = ".verify-logs"

[tool.mutmut]
source_paths = ["src/agent_maintainer/"]
only_mutate = ["src/agent_maintainer/core/runtime.py"]
pytest_add_cli_args_test_selection = ["tests/core/test_runtime.py"]
pytest_add_cli_args = ["-p", "no:tach"]
mutate_only_covered_lines = true
use_setproctitle = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90", "PLR", "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.deptry]
known_first_party = ["agent_maintainer", "hook_audit"]
requirements_files = ["requirements.txt"]
requirements_files_dev = ["config/dev-dependencies.txt", "config/dev-lock.txt"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "actionlint-py",
  "bandit",
  "check-jsonschema",
  "coverage",
  "cyclonedx-bom",
  "deptry",
  "diff-cover",
  "hypothesis",
  "import-linter",
  "interrogate",
  "mutmut",
  "pip-audit",
  "pip-licenses",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "semgrep",
  "tach",
  "vulture",
  "wemake-python-styleguide",
  "xenon",
  "yamllint",
  "zizmor",
]
DEP003 = ["tomli"]
DEP004 = ["tomli"]
