[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-maintainer"
version = "0.1.0b4"
description = "Repository maintenance checks and diagnostics for AI-assisted Python development."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Doug Monsky" }]
keywords = [
  "ai",
  "coding-agents",
  "maintainability",
  "ci",
  "python",
  "code-quality",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/douglasmonsky/agent-maintainer"
Repository = "https://github.com/douglasmonsky/agent-maintainer"
Issues = "https://github.com/douglasmonsky/agent-maintainer/issues"
Documentation = "https://github.com/douglasmonsky/agent-maintainer#readme"

[project.scripts]
agent-maintainer = "agent_maintainer.cli:console_main"
archguard = "archguard.cli:console_main"

[project.optional-dependencies]
core = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
]
agent = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
]
hardening = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
  "actionlint-py",
  "check-jsonschema",
  "interrogate",
  "pip-audit",
  "wemake-python-styleguide",
  "yamllint",
  "zizmor",
]
manual = [
  "cyclonedx-bom",
  "mutmut",
  "pip-licenses",
  "semgrep; python_version < '3.13'",
]
compression = ["headroom-ai"]
all = [
  "actionlint-py",
  "bandit",
  "check-jsonschema",
  "coverage",
  "cyclonedx-bom",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "interrogate",
  "mutmut",
  "pip-audit",
  "pip-licenses",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "semgrep; python_version < '3.13'",
  "tach",
  "vulture",
  "wemake-python-styleguide",
  "xenon",
  "yamllint",
  "zizmor",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.agent_maintainer]
mode = "fresh-strict"
architecture_tool = "tach"
ratchet_enabled = true
source_roots = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
]
test_roots = ["tests"]
package_paths = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
]
coverage_source = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
]
file_length_paths = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
  "tests",
]
structure_paths = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
]
structure_ignore_paths = [
  "tests/**",
  "migrations/**",
  "generated/**",
  ".venv/**",
  "venv/**",
  "**/__pycache__/**",
]
folder_file_warn = 20
folder_file_block = 40
structure_cluster_min = 4
vulture_paths = [
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
  "tests",
]
require_tests = true
coverage_fail_under = 90
diff_cover_fail_under = 90
source_without_test_change_error_profiles = ["precommit"]
allow_source_without_test_change = false
cohesive_change_override_enabled = true
cohesive_change_override_paths = [
  "src/agent_maintainer/**",
  "src/archguard/**",
  ".codex/hooks/**",
  ".claude/hooks/**",
]
cohesive_change_override_max_lines = 2500
cohesive_change_override_max_files = 40
xenon_max_absolute = "B"
xenon_max_modules = "A"
xenon_max_average = "A"
pyright_type_checking_mode = "standard"
enable_pip_audit = true
pip_audit_args = ["-r", "config/dev-lock.txt"]
enable_mutmut = true
mutmut_args = ["run"]
mutmut_target_min = 3
mutmut_result_ratchet_enabled = true
mutmut_max_survivors = 16
mutmut_max_suspicious = 0
mutmut_max_timeouts = 0
mutmut_min_score = 94
enable_semgrep = true
semgrep_args = [
  "scan",
  "--config",
  "semgrep.yml",
  "--error",
  "--metrics=off",
  "src/agent_maintainer",
  "src/archguard",
  ".codex/hooks",
  ".claude/hooks",
]
semgrep_profiles = ["manual"]
enable_osv_scanner = true
osv_scanner_args = ["scan", "source", "-r", ".", "--config", "osv-scanner.toml"]
osv_scanner_profiles = ["manual"]
enable_sbom = true
sbom_args = [
  "requirements",
  "config/dev-lock.txt",
  "--output-reproducible",
  "--of",
  "JSON",
]
sbom_profiles = ["ci"]
enable_license_check = true
license_check_args = ["--from=mixed", "--format=json"]
license_check_profiles = ["manual"]
enable_secret_scanning = true
secret_scanner = "gitleaks"
secret_scan_profiles = ["full", "ci"]
secret_scan_history_profiles = ["security"]
enable_wemake = true
enable_interrogate = true
interrogate_fail_under = 80
enable_markdownlint = true
markdownlint_paths = ["**/*.md"]
enable_yamllint = true
yamllint_paths = [
  ".github/workflows",
  ".github/dependabot.yml",
  ".pre-commit-config.yaml",
  ".markdownlint-cli2.yaml",
  ".yamllint",
  "zizmor.yml",
]
enable_taplo = true
taplo_paths = [
  "pyproject.toml",
  "tach.toml",
  "osv-scanner.toml",
  "config/*.toml",
]
enable_check_jsonschema = true
check_jsonschema_args = [
  "--builtin-schema",
  "vendor.github-workflows",
  ".github/workflows/verify.yml",
  ".github/workflows/publish.yml",
]

[tool.agent_maintainer.diagnostics]
enabled = true
log_dir = ".verify-logs"
run_history_limit = 10

[tool.mutmut]
source_paths = ["src/agent_maintainer/"]
also_copy = ["src/archguard"]
only_mutate = [
  "src/agent_maintainer/config/coercion.py",
  "src/agent_maintainer/core/runtime.py",
  "src/agent_maintainer/test_intel/mutation_targets.py",
]
do_not_mutate = [
  "src/agent_maintainer/__init__.py",
  "src/agent_maintainer/__main__.py",
]
pytest_add_cli_args_test_selection = [
  "tests/config/test_config_coercion.py",
  "tests/config/test_config_loading.py",
  "tests/core/test_runtime.py",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_report_ranks_branchy_tested_logic",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_renderers_are_advisory",
  "tests/test_intel/test_mutation_targets.py::test_mutation_targets_ratchet_boost",
  "tests/test_intel/test_mutation_targets.py::test_target_score_accumulates_all_signal_weights",
  "tests/test_intel/test_mutation_targets.py::test_target_for_function_keeps_threshold_score_and_details",
  "tests/test_intel/test_mutation_targets.py::test_target_sort_key_orders_highest_score_first",
  "tests/test_intel/test_mutation_targets.py::test_targets_for_source_returns_deterministically_sorted_targets",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_report_passes_ratchet_context",
  "tests/test_intel/test_mutation_targets.py::test_mutation_targets_cover_defensive_branches",
]
pytest_add_cli_args = ["-p", "no:tach"]
max_stack_depth = 8
mutate_only_covered_lines = true
use_setproctitle = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90", "PLR", "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
  "release: release-only packaging checks that build artifacts and install extras",
]

[tool.deptry]
known_first_party = [
  "agent_maintainer",
  "archguard",
  "catalog",
  "fresh_strict_example",
  "hook_audit",
  "legacy_ratchet_example",
  "legacy",
  "scoring",
]
package_module_name_map = { "headroom-ai" = "headroom" }
requirements_files = ["requirements.txt"]
requirements_files_dev = [
  "config/dev-dependencies.txt",
  "config/dev-lock.txt",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "actionlint-py",
  "bandit",
  "build",
  "check-jsonschema",
  "coverage",
  "cyclonedx-bom",
  "deptry",
  "diff-cover",
  "headroom-ai",
  "import-linter",
  "interrogate",
  "mutmut",
  "pip-audit",
  "pip-licenses",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "rust-just",
  "semgrep",
  "tach",
  "twine",
  "vulture",
  "wemake-python-styleguide",
  "xenon",
  "yamllint",
  "zizmor",
]
DEP003 = ["tomli"]
DEP004 = ["tomli"]
