[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

# docsync:evidence.start evidence.readme.package_metadata
[project]
name = "agent-maintainer"
version = "0.1.0b5"
description = "Repository maintenance checks and diagnostics for AI-assisted Python development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.3"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Doug Monsky" }]
keywords = [
  "ai",
  "coding-agents",
  "maintainability",
  "ci",
  "python",
  "code-quality",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/douglasmonsky/agent-maintainer"
Repository = "https://github.com/douglasmonsky/agent-maintainer"
Issues = "https://github.com/douglasmonsky/agent-maintainer/issues"
Documentation = "https://github.com/douglasmonsky/agent-maintainer#readme"

[project.scripts]
agent-maintainer = "agent_maintainer.cli:console_main"
archguard = "archguard.cli:console_main"
docsync = "docsync.cli:console_main"
# docsync:evidence.end evidence.readme.package_metadata

[project.optional-dependencies]
core = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
]
agent = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
]
hardening = [
  "bandit",
  "coverage",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "tach",
  "vulture",
  "xenon",
  "actionlint-py",
  "check-jsonschema",
  "interrogate",
  "pip-audit",
  "wemake-python-styleguide",
  "yamllint",
  "zizmor",
]
manual = [
  "cyclonedx-bom",
  "mutmut",
  "pip-licenses",
  "semgrep; python_version < '3.13'",
]
compression = ["headroom-ai"]
all = [
  "actionlint-py",
  "bandit",
  "check-jsonschema",
  "coverage",
  "cyclonedx-bom",
  "defusedxml",
  "deptry",
  "diff-cover",
  "import-linter",
  "interrogate",
  "mutmut",
  "pip-audit",
  "pip-licenses",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "semgrep; python_version < '3.13'",
  "tach",
  "vulture",
  "wemake-python-styleguide",
  "xenon",
  "yamllint",
  "zizmor",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.agent_maintainer]
mode = "fresh-strict"
architecture_tool = "tach"
ratchet_enabled = false
source_roots = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
]
test_roots = ["tests"]
package_paths = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
]
coverage_source = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
]
file_length_paths = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
  "tests",
  "config/vulture-whitelist.py",
]
structure_paths = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
]
structure_ignore_paths = [
  "tests/**",
  "migrations/**",
  "generated/**",
  ".venv/**",
  "venv/**",
  "**/__pycache__/**",
]
folder_file_warn = 20
folder_file_block = 40
structure_cluster_min = 4
vulture_paths = [
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
  "tests",
]
require_tests = true
coverage_fail_under = 90
diff_cover_fail_under = 90
source_without_test_change_error_profiles = ["precommit"]
allow_source_without_test_change = false
cohesive_change_override_enabled = true
cohesive_change_override_paths = [
  "src/agent_context/**",
  "src/agent_client_hooks/**",
  "src/agent_maintainer/**",
  "src/agent_repair_facts/**",
  "src/agent_run_artifacts/**",
  "src/archguard/**",
  "src/docsync/**",
  "tests/docsync/**",
  ".docsync/**",
  ".codex/hooks/**",
  ".claude/hooks/**",
]
cohesive_change_override_max_lines = 2500
cohesive_change_override_max_files = 40
xenon_max_absolute = "B"
xenon_max_modules = "A"
xenon_max_average = "A"
pyright_type_checking_mode = "standard"
pyright_strict_ratchet_enabled = true
pyright_strict_baseline = "config/pyright-strict-baseline.json"
pyright_strict_max_errors = 0
pyright_strict_profiles = ["manual"]
enable_pip_audit = true
pip_audit_args = [
  "-r",
  "config/dev-lock.txt",
  "--no-deps",
  "--disable-pip",
  "--progress-spinner",
  "off",
  "--timeout",
  "5",
]
enable_mutmut = true
mutmut_args = ["run"]
mutmut_target_min = 3
mutmut_result_ratchet_enabled = true
mutmut_max_survivors = 2
mutmut_max_suspicious = 0
mutmut_max_timeouts = 0
mutmut_min_score = 99
enable_semgrep = true
semgrep_args = [
  "scan",
  "--config",
  "semgrep.yml",
  "--error",
  "--metrics=off",
  "src/agent_context",
  "src/agent_client_hooks",
  "src/agent_maintainer",
  "src/agent_repair_facts",
  "src/agent_run_artifacts",
  "src/archguard",
  "src/docsync",
  ".codex/hooks",
  ".claude/hooks",
]
semgrep_profiles = ["manual"]
enable_osv_scanner = true
osv_scanner_args = ["scan", "source", "-r", ".", "--config", "osv-scanner.toml"]
osv_scanner_profiles = ["manual"]
enable_sbom = true
sbom_args = [
  "requirements",
  "config/dev-lock.txt",
  "--output-reproducible",
  "--of",
  "JSON",
]
sbom_profiles = ["ci"]
enable_license_check = true
license_check_args = ["--from=mixed", "--format=json"]
license_check_profiles = ["manual"]
enable_secret_scanning = true
secret_scanner = "gitleaks"
secret_scan_profiles = ["full", "ci"]
secret_scan_history_profiles = ["security"]
enable_wemake = true
enable_interrogate = true
interrogate_fail_under = 80
enable_markdownlint = true
markdownlint_paths = ["**/*.md"]
enable_yamllint = true
yamllint_paths = [
  ".github/workflows",
  ".github/dependabot.yml",
  ".pre-commit-config.yaml",
  ".markdownlint-cli2.yaml",
  ".yamllint",
  "zizmor.yml",
]
enable_taplo = true
taplo_paths = [
  "pyproject.toml",
  "tach.toml",
  "osv-scanner.toml",
  "config/*.toml",
]
enable_check_jsonschema = true
check_jsonschema_args = [
  "--builtin-schema",
  "vendor.github-workflows",
  ".github/workflows/verify.yml",
  ".github/workflows/publish.yml",
]

[tool.agent_maintainer.file_baselines]
enabled = true
mode = "advisory"

[tool.agent_maintainer.file_baselines.groups.docs]
include = ["docs/**/*.md", "*.md"]
role = "docs"
max_physical_lines = 1200
max_nonblank_lines = 900
changed_file_warn = 20
changed_line_warn = 1200

[tool.agent_maintainer.file_baselines.groups.config]
include = [
  "*.toml",
  "config/**/*.txt",
  ".github/**/*.yml",
  ".github/**/*.yaml",
  ".docsync/**/*.yml",
]
role = "config"
max_physical_lines = 1500
max_nonblank_lines = 1500
changed_file_warn = 12
changed_line_warn = 1200

[tool.agent_maintainer.file_baselines.groups.tests]
include = ["tests/**/*.py"]
role = "test"
max_physical_lines = 500
max_nonblank_lines = 400
changed_file_warn = 20
changed_line_warn = 1200

[tool.agent_maintainer.diagnostics]
enabled = true
log_dir = ".verify-logs"
run_history_limit = 10

[tool.mutmut]
source_paths = ["src/agent_maintainer/"]
also_copy = ["src/archguard"]
only_mutate = [
  "src/agent_maintainer/config/coercion.py",
  "src/agent_maintainer/core/runtime.py",
  "src/agent_maintainer/test_intel/mutation/targets.py",
]
do_not_mutate = [
  "src/agent_maintainer/__init__.py",
  "src/agent_maintainer/__main__.py",
]
pytest_add_cli_args_test_selection = [
  "tests/config/test_config_coercion.py",
  "tests/config/test_config_loading.py",
  "tests/config/test_workspace_config.py::test_coerce_updates_reads_workspace_tables",
  "tests/core/test_runtime.py",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_report_ranks_branchy_tested_logic",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_renderers_are_advisory",
  "tests/test_intel/test_mutation_targets.py::test_mutation_targets_ratchet_boost",
  "tests/test_intel/test_mutation_targets.py::test_target_score_accumulates_all_signal_weights",
  "tests/test_intel/test_mutation_targets.py::test_target_for_function_keeps_threshold_score_and_details",
  "tests/test_intel/test_mutation_targets.py::test_target_sort_key_orders_highest_score_first",
  "tests/test_intel/test_mutation_targets.py::test_targets_for_source_returns_deterministically_sorted_targets",
  "tests/test_intel/test_mutation_targets.py::test_mutation_target_report_passes_ratchet_context",
  "tests/test_intel/test_mutation_target_survivors.py::test_mutation_target_report_defaults_missing_metadata_to_zero",
  "tests/test_intel/test_mutation_target_survivors.py::test_ratchet_path_scores_reads_existing_baseline",
  "tests/test_intel/test_mutation_targets.py::test_mutation_targets_cover_defensive_branches",
]
pytest_add_cli_args = ["-p", "no:tach"]
max_stack_depth = 8
mutate_only_covered_lines = true
use_setproctitle = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90", "PLR", "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
  "release: release-only packaging checks that build artifacts and install extras",
]

[tool.deptry]
known_first_party = [
  "agent_context",
  "agent_client_hooks",
  "agent_maintainer",
  "agent_repair_facts",
  "agent_run_artifacts",
  "archguard",
  "catalog",
  "docsync",
  "fresh_strict_example",
  "hook_audit",
  "legacy_ratchet_example",
  "legacy",
  "scoring",
]
package_module_name_map = { "headroom-ai" = "headroom", "PyYAML" = "yaml" }
requirements_files = ["requirements.txt"]
requirements_files_dev = ["config/dev-dependencies.txt", "config/dev-lock.txt"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "actionlint-py",
  "bandit",
  "build",
  "check-jsonschema",
  "coverage",
  "cyclonedx-bom",
  "deptry",
  "diff-cover",
  "headroom-ai",
  "import-linter",
  "interrogate",
  "mutmut",
  "pip-audit",
  "pip-licenses",
  "pre-commit",
  "pylint",
  "pyright",
  "pytest",
  "pytest-cov",
  "radon",
  "ruff",
  "rust-just",
  "semgrep",
  "tach",
  "twine",
  "vulture",
  "wemake-python-styleguide",
  "xenon",
  "yamllint",
  "zizmor",
]
DEP003 = ["tomli"]
DEP004 = ["tomli"]
