[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-broker"
version = "0.1.0"
description = "Downstream task broker incubator for Agent Maintainer experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["agent-maintainer>=0.1.0b5"]

[project.scripts]
agent-task-broker = "agent_task_broker.cli:console_main"

[tool.setuptools.packages.find]
where = ["src"]
